--- a/04 Kaggle&PublicData/0715/0715_hmwk/0715_hmwk_csv.ipynb
+++ b/04 Kaggle&PublicData/0715/0715_hmwk/0715_hmwk_csv.ipynb
@@ -40,21 +40,25 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "7d6af0c7",
+   "id": "5e5f2c1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# df에서 호선명, 역이름, 07:00-07:59 하차와 08:00-08:59 하차만 추출\n",
-    "df = df[[df.columns[1],df.columns[3],df.columns[11],df.columns[13]]]\n",
-    "# df 컬럼 재설정\n",
-    "df.columns=['호선', '역이름', '07:00-07:59', '08:00-08:59']"
+    "# 07:00-07:59 하차와 08:00-08:59 하차 열을 합친 새로운 열을 생성\n",
+    "df['출근시간 하차인원'] = df[df.columns[11]] + df[df.columns[13]]\n",
+    "# 호선, 역 출근 시간 하차인원 만 추출\n",
+    "df = df.iloc[:, [1, 3, len(df.columns) - 1]]\n",
+    "# columns 명 이름 변경\n",
+    "df.columns = ['호선', '역이름', '출근시간 하차인원']"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
    "id": "c5869681",
-   "metadata": {},
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -79,8 +83,7 @@
        "      <th></th>\n",
        "      <th>호선</th>\n",
        "      <th>역이름</th>\n",
-       "      <th>07:00-07:59</th>\n",
-       "      <th>08:00-08:59</th>\n",
+       "      <th>출근시간 하차인원</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -88,40 +91,34 @@
        "      <th>0</th>\n",
        "      <td>1호선</td>\n",
        "      <td>서울역</td>\n",
-       "      <td>100397</td>\n",
-       "      <td>201687</td>\n",
+       "      <td>302084</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1호선</td>\n",
        "      <td>시청</td>\n",
-       "      <td>62427</td>\n",
-       "      <td>179710</td>\n",
+       "      <td>242137</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>1호선</td>\n",
        "      <td>종각</td>\n",
-       "      <td>95376</td>\n",
-       "      <td>235160</td>\n",
+       "      <td>330536</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>1호선</td>\n",
        "      <td>종로3가</td>\n",
-       "      <td>25469</td>\n",
-       "      <td>68699</td>\n",
+       "      <td>94168</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>1호선</td>\n",
        "      <td>종로5가</td>\n",
-       "      <td>41304</td>\n",
-       "      <td>96113</td>\n",
+       "      <td>137417</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
-       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -130,57 +127,52 @@
        "      <th>610</th>\n",
        "      <td>신림선</td>\n",
        "      <td>당곡</td>\n",
-       "      <td>1981</td>\n",
-       "      <td>5511</td>\n",
+       "      <td>7492</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>611</th>\n",
        "      <td>신림선</td>\n",
        "      <td>신림</td>\n",
-       "      <td>1075</td>\n",
-       "      <td>1704</td>\n",
+       "      <td>2779</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>612</th>\n",
        "      <td>신림선</td>\n",
        "      <td>서원</td>\n",
-       "      <td>977</td>\n",
-       "      <td>1319</td>\n",
+       "      <td>2296</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>613</th>\n",
        "      <td>신림선</td>\n",
        "      <td>서울대벤처타운</td>\n",
-       "      <td>3834</td>\n",
-       "      <td>6306</td>\n",
+       "      <td>10140</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>614</th>\n",
        "      <td>신림선</td>\n",
        "      <td>관악산(서울대)</td>\n",
-       "      <td>3938</td>\n",
-       "      <td>8792</td>\n",
+       "      <td>12730</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>615 rows × 4 columns</p>\n",
+       "<p>615 rows × 3 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "      호선       역이름  07:00-07:59  08:00-08:59\n",
-       "0    1호선       서울역       100397       201687\n",
-       "1    1호선        시청        62427       179710\n",
-       "2    1호선        종각        95376       235160\n",
-       "3    1호선      종로3가        25469        68699\n",
-       "4    1호선      종로5가        41304        96113\n",
-       "..   ...       ...          ...          ...\n",
-       "610  신림선        당곡         1981         5511\n",
-       "611  신림선        신림         1075         1704\n",
-       "612  신림선        서원          977         1319\n",
-       "613  신림선   서울대벤처타운         3834         6306\n",
-       "614  신림선  관악산(서울대)         3938         8792\n",
+       "      호선       역이름  출근시간 하차인원\n",
+       "0    1호선       서울역     302084\n",
+       "1    1호선        시청     242137\n",
+       "2    1호선        종각     330536\n",
+       "3    1호선      종로3가      94168\n",
+       "4    1호선      종로5가     137417\n",
+       "..   ...       ...        ...\n",
+       "610  신림선        당곡       7492\n",
+       "611  신림선        신림       2779\n",
+       "612  신림선        서원       2296\n",
+       "613  신림선   서울대벤처타운      10140\n",
+       "614  신림선  관악산(서울대)      12730\n",
        "\n",
-       "[615 rows x 4 columns]"
+       "[615 rows x 3 columns]"
       ]
      },
      "execution_count": 3,
@@ -200,7 +192,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "num_sum_list = []  # 각 호선의 역별 sum 값을 넣어둘 리스트\n",
     "max_list = [] # 각 호선별 max 값을 넣어둘 리스트\n",
     "max_name_list = [] # 각 호선별 max 값의 역 이름을 넣어둘 리스트\n",
     "max_xticks_list = [] # xticks에 사용할 리스트\n",
@@ -209,14 +200,9 @@
     "for i in range(1, 8):\n",
     "    df_temp = df[df['호선'] == f'{i}호선'] # {i} 호선에 맞는 dt_temp 생성\n",
     "    df_temp.reset_index(drop=True, inplace=True) # dt_temp의 인덱스 초기화\n",
-    "    num_sum_list = [] # 매번 num_sum_list 초기화 하고\n",
     "    \n",
-    "    for j in range(0, len(df_temp.index)): # dt_temp 리스트에서\n",
-    "        num_sum = df_temp['07:00-07:59'][j] + df_temp['08:00-08:59'][j] # 07:00-07:59과 08:00-08:59 컬럼의 값을 num_sum에 저장 \n",
-    "        num_sum_list.append(num_sum) # num_sum을 num_sum_list에 저장해두고\n",
-    "        \n",
-    "    num_max = max(num_sum_list) # num_sum_list의 최대값을 구하고\n",
-    "    name_max = df_temp['역이름'][num_sum_list.index(num_max)] # num_max의 index에 해당하는 역이름 컬럼의 값을 name_max에 저장\n",
+    "    num_max = df_temp['출근시간 하차인원'].max() # df_temp['출근시간 하차인원']의 max값 구하기\n",
+    "    name_max = df_temp['역이름'][df_temp['출근시간 하차인원'].argmax()] # df_temp['출근시간 하차인원'] max값의 인덱스로 해당 '역이름' 구하기\n",
     "    \n",
     "    max_list.append(num_max) # max_list에 num_max 추가\n",
     "    max_name_list.append(name_max) # max_name_list name_max 추가\n",
